@@ -719,7 +719,6 @@ static struct to_cmdtab to_cmds[] = {
     {"cp",	"[-f] from to", TO_UNLIMITED, to_copy, GED_FUNC_PTR_NULL},
     {"cpi",	(char *)0, TO_UNLIMITED, to_pass_through_func, ged_cpi},
     {"d",	(char *)0, TO_UNLIMITED, to_pass_through_and_refresh_func, ged_erase},
-    {"dall",	(char *)0, TO_UNLIMITED, to_pass_through_and_refresh_func, ged_erase_all},
     {"data_arrows",	"???", TO_UNLIMITED, to_data_arrows, GED_FUNC_PTR_NULL},
     {"data_axes",	"???", TO_UNLIMITED, to_data_axes, GED_FUNC_PTR_NULL},
     {"data_labels",	"???", TO_UNLIMITED, to_data_labels, GED_FUNC_PTR_NULL},
@@ -746,7 +745,6 @@ static struct to_cmdtab to_cmds[] = {
     {"edcomb",	(char *)0, TO_UNLIMITED, to_pass_through_func, ged_edcomb},
     {"edmater",	(char *)0, TO_UNLIMITED, to_pass_through_func, ged_edmater},
     {"erase",	(char *)0, TO_UNLIMITED, to_pass_through_and_refresh_func, ged_erase},
-    {"erase_all",	(char *)0, TO_UNLIMITED, to_pass_through_and_refresh_func, ged_erase_all},
     {"ev",	(char *)0, TO_UNLIMITED, to_autoview_func, ged_ev},
     {"expand",	(char *)0, TO_UNLIMITED, to_pass_through_func, ged_expand},
     {"eye",	"[x y z]", 5, to_view_func_plus, ged_eye},
